--- a/localization/CMakeLists.txt
+++ b/localization/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  geodesy
 )
 
 ## System dependencies are found with CMake's conventions
@@ -160,7 +161,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 # catkin_install_python(PROGRAMS
-#   scripts/my_python_script
+#   scripts/serialnode.py	
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
